--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a href="#">Photos</a>
             </li>
             <li class="nav-item">
-              <a href="/contact">Contact</a>
+              <a href="./contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -62,7 +62,7 @@
     </div>
   </header>
 
-  <main class="main py-5">
+  <main class="main bg-img py-5">
     <div class="container">
       <form class="position-relative mb-5 form">
         <input id="find-input" type="text" placeholder="Find your location" class="form-control">
